--- a/filesysytemtest/filesysytemtest.vcxproj.filters
+++ b/filesysytemtest/filesysytemtest.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="1234.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="8.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
