实现file类的=重载

--- a/filesysytemtest/filesysytemtest.vcxproj
+++ b/filesysytemtest/filesysytemtest.vcxproj
@@ -130,6 +130,7 @@
   <ItemGroup>
     <ClCompile Include="1234.cpp" />
     <ClCompile Include="file.h" />
+    <ClCompile Include="filefunction.cpp" />
     <ClCompile Include="filesys.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
