chore: switch build tools to CMake

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,5 @@
 #! TODO: configure the build process for application source
+
+aux_source_directory(. SOURCE_FILES)
+
+add_executable(${CMAKE_PROJECT_NAME} ${SOURCE_FILES})
