--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,1 +1,7 @@
 #! TODO: configure the build process for application source
+
+project(ftmapi)
+
+set(LIB_SOURCE_FILES api.h api.cpp)
+
+add_library(${PROJECT_NAME} STATIC ${LIB_SOURCE_FILES})
