feat: add project outline

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -16,5 +16,5 @@ target_include_directories(
 target_link_libraries(
 	${PROJECT_NAME}
 	PRIVATE GTest::gtest GTest::gtest_main
-	PRIVATE ftmapi
+	PRIVATE f-tagman::ftmapi
 )
